# flexcc

./: .gitignore  404.html  README.md  app.py  backend.py  index.html  pydantic_demo.py  pyproject.toml
.github/workflows/: ci,yaml
config/: preferences.yaml  settings.py
core/: copy.py  dirsync.py
scripts/: custom_script.py  user_script.py
scripts/01JWRCPA1E6C24YV81X9CWCWNZ/: .attr  attributes.yaml  main.py
scripts/01JWV38QC455CTBPFF4VZA1F27/: main.py
scripts/01JWV38RKGA33PAFBHR6DNEWA7/: attributes.yaml  main.py
scripts/01JX5HXJX7VWTTV45E61EE28GM/: attributes.yaml  main.py
scripts/01JXAEC7JM8H4TJHPSF531KTGC/: attributes.yaml  main.py
scripts/01JXAFXJV9JJRZPXKT51ZZBG56/: attributes.yaml  main.py
sys/blank_script/: attributes.yaml  main.py
ui/: console.py  console_main.css  tray.py
util/: path_util.py  text_util.py
